<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFCE54" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="feel"
        android:paddingHorizontal="14dp"
        android:text="@string/AddButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="128dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/circle"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="historyActivity"
        android:paddingHorizontal="14dp"
        android:text="@string/ListButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/HeaderText"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/motiView"
        android:layout_width="298dp"
        android:layout_height="91dp"
        android:layout_marginTop="128dp"
        android:text="@string/motiText"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="17dp"
        android:fontFamily="@font/quicksand"
        android:textColor="#343333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header" />

</androidx.constraintlayout.widget.ConstraintLayout>